# SeisSol-Matrices

./: .gitignore  pyproject.toml
.github/workflows/: main.yml
src/seissol_matrices/: plasticity_matrices.py
