[tool.poetry]
name = "seissol_matrices"
version = "0.1.0"
description = ""
authors = [
    "Sebastian Wolf <wolf.sebastian@in.tum.de>",
    "Lukas Krenz <lukas.krenz@in.tum.de>",
]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
numpy = "^1.24.2"
scipy = "^1.10.0"

[tool.poetry.group.dev.dependencies]
nose2 = "^0.12.0"
coverage = "^7.1.0"
requests = "^2.28.2"
black = "^23.1.0"
sympy = "^1.12"

[tool.poetry.group.ci.dependencies]
coverage-badge = "^1.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
